dataset1235/2025-2/2947369575/users/2667057248/executions/1003782500_1626817775.log
== SUBMISSION (2025-08-27 18:14:33)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3
print(f'{A:.3f}')
print(f'{V:.2f}')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.00
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.70
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.08
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.15
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:13:23)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3
print(f'{A:.3f}')
print(f'{V:.3f}')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:05:40)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
None
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
None
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
None
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
None
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
None
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:14:11)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3
print(f'{A:.3f}')
print(f'{V:.2f}')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.00
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.70
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.08
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.15
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:07:00)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3
print(A)
print(V)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004188790204786391
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.7035074111598
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.075684676355
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.279762570686
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.1508659336
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510321638291124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:14:41)
-- CODE: 
import math
r=float(input())
A= math.pi*r**2
V= (4/3)*math.pi*r**3
print(f'{A:.3f}')
print(f'{V:.3f}')
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.280
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:02:22)
-- CODE: 
r=float(input())
A= math.pi*r**2
V=4/3*math.pi*r**3

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= math.pi*r**2
       ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
